--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,31 +3,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    xmlns:tools = "http://schemas.android.com/tools">
+    xmlns:tools = "http://schemas.android.com/tools"
+    android:minHeight="@dimen/list_item_height"
+    android:background="@color/tan_background">
     <ImageView
         android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher"
-        android:paddingLeft="16dp"
-        android:paddingTop="16dp"/>
+        android:layout_width="@dimen/list_item_height"
+        android:layout_height="@dimen/list_item_height" />
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical">
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:id="@+id/text_view1"
         android:paddingLeft="16dp"
         android:paddingTop="16dp"
-        tools:text= "Lutti" />
+        android:gravity="bottom"
+        tools:text= "Lutti"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:textColor="@android:color/white"
+        android:textStyle="bold" />
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_gravity="top"
         android:id="@+id/text_view2"
         android:paddingLeft="16dp"
-        tools:text= "One"/>
+        tools:text= "One"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:textColor="@android:color/white"/>
     </LinearLayout>
 
 </LinearLayout>
